# AVR-VMC-PeripheralControl-Module

./: .pre-commit-config.yaml  Dockerfile  README.md  package-lock.json  pyproject.toml
.github/workflows/: build.yml  pre-commit_update.yml
src/: pcm.py
