[tool.poetry]
    name        = "bell-avr-vmc-peripheralcontrol-module"
    version     = "0.1.0"
    description = "Peripheral Control Computer module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-PeripheralControl-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python             = ">=3.9,<3.12"
    loguru             = "^0.6.0"
    bell-avr-libraries = { extras = ["serial"], version = "0.2.0a0" }

[tool.poetry.group.dev.dependencies]
    pre-commit = "^3.2.1"

[tool.pyright]
    typeCheckingMode = "basic"
    venvPath         = "."
    venv             = ".venv"

[tool.ruff]
    ignore = ["E501"]
