[tool.poetry]
    name        = "bell-avr-vmc-peripheralcontrol-module"
    version     = "0.1.0"
    description = "Peripheral Control Computer module for Bell AVR"
    license     = "MIT"
    readme      = "README.md"
    homepage    = "https://github.com/bellflight/AVR-VMC-PeripheralControl-Module"
    authors     = ["Nathan Vaughn <nvaughn51@gmail.com>"]

[tool.poetry.dependencies]
    python             = ">=3.9,<3.13"
    loguru             = "0.7.2"
    bell-avr-libraries = { extras = ["serial"], version = "0.2.0a7" }

[tool.poetry.group.dev.dependencies]
    pre-commit = "^3.5.0"

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
